<resources>
    <string name="app_name" translatable="false">Muscular</string>
    <string name="tab_stats">Statistiche</string>
    <string name="tab_workouts">Schede</string>
    <string name="tab_exercises">Esercizi</string>

    <string name="button_back">Indietro</string>

    <string name="image_logo_description">Logo</string>

    <string name="default_exercise_image_description">Descrizione dell\'esercizio</string>

    <string name="button_delete">Elimina</string>
    <string name="exercises_default_empty">Il database di esercizi è vuoto.</string>
    <string name="button_exercise_new">Aggiungi</string>
    <string name="button_modify">Modifica</string>
    <string name="default_notification_channel_id" translatable="false">channel_id</string>
    <string name="bn_name">Imposta lingua</string>
    <string name="ad_title">Seleziona la lingua</string>
    <string name="button_programme_new">Aggiungi Scheda</string>
    <string name="programmes_default_empty">Il database di schede è vuoto.</string>
    <string name="set_id">ID</string>
    <string name="set_reps">Reps</string>
    <string name="set_weight">Weight</string>
    <string name="curr_weight">Peso</string>
    <string name="curr_reps">Ripetizioni</string>
    <string name="inizia_allenamento">Inizia allenamento</string>
    <string name="Riprendi">Riprendi ad allenarti!</string>
    <string name="Timer">Il timer sta per scadere.</string>
    <string name="Rimasto">secondi rimasti.</string>
    <string name="Riposo">Riposo (sec):</string>
    <string name="FreshTime" translatable="false">"Fresh Time!"</string>
    <string name="StayHydrated">Mantieniti idratato durante la tua giornata!</string>




    <string name="ferma_allenamento">Ferma allenamento</string>

</resources>