<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/mainButtonNavigationView"
        android:layout_width="0dp"
        android:layout_height="61dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        style="@style/AppBottomNavigationViewStyle">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal|center_vertical"
            android:orientation="horizontal">

            <Button
                android:id="@+id/nav_button_stats"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/tab_stats"
                style="?android:attr/buttonBarButtonStyle" />


            <Button
                android:id="@+id/nav_button_workouts"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/tab_workouts"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/nav_button_exercises"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/tab_exercises"
                style="?android:attr/buttonBarButtonStyle" />
        </LinearLayout>

    </com.google.android.material.bottomnavigation.BottomNavigationView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="328dp"
        android:layout_height="401dp"
        android:layout_marginTop="30dp"
        app:layout_constraintBottom_toTopOf="@+id/mainButtonNavigationView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/main_textview_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="monospace"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textAppearance="@style/TextAppearance.AppCompat.Display2"
            android:textStyle="bold"
            android:typeface="monospace"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/main_imageview_logo"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:contentDescription="@string/image_logo_description"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/main_textview_title"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/ic_launcher_muscular" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/bnLang"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bn_name"
        app:layout_constraintBottom_toTopOf="@+id/mainButtonNavigationView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />




</androidx.constraintlayout.widget.ConstraintLayout>
