<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/outer_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <ImageView
        android:id="@+id/image_thumb_button"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:scaleType="centerCrop"
        android:clickable="true"
        android:contentDescription="@string/default_exercise_image_description"
        android:onClick="showFullscreenImage" />

    <TextView
        android:id="@+id/exerciseName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/image_thumb_button"
        android:layout_marginTop="8dp"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginStart="8dp"/>

    <TextView
        android:id="@+id/exerciseDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/exerciseName"
        android:layout_marginTop="4dp"
        android:textSize="16sp"
        android:layout_marginStart="8dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:orientation="vertical"
        android:layout_marginStart="8dp">

        <Button
            android:id="@+id/exercise_modify_button"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:backgroundTint="@android:color/holo_orange_light"
            android:text="@string/button_modify"
            android:textColor="@android:color/white"/>

        <Button
            android:id="@+id/exercise_delete_button"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginTop="4dp"
            android:backgroundTint="@android:color/holo_red_dark"
            android:text="@string/button_delete"
            android:textColor="@android:color/white"/>

    </LinearLayout>
</RelativeLayout>
